Closed Bug 128338 Opened 24 years ago Closed 24 years ago

Incorrect fonts used for certain "lang=" attributes

Categories

(Core :: Internationalization, defect)

x86
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: pergj, Assigned: nhottanscp)

References

()

Details

(Keywords: intl)

Attachments

(2 files)

When setting NS_FONT_DEBUG=3 and loading the page in the URL field I get the output below. The "pre" section with the lang="nb" lang="foobar" uses the comic font and the rest are correct. The comic font is the first with iso8859-3 encodint on my system, so that must be why it is selected. I first thought that the problem was that the language nb mapped to the wrong character set. That does not explain why "foobar" renders wrong while "foo-bar" seems to be correct. As far as I can tell from looking at the relevant standards both "no", "no-bokmal" and "nb" should be correct identifiers for the same language. GetFontNames -adobe-courier-*-*-*-*-*-*-*-*-*-*-iso8859-1 loaded -adobe-courier-medium-r-normal--12-120-75-75-m-70-iso8859-1 FindFont(0061)[monospace, ] returns -adobe-courier-medium-r-normal--12-120-75-75-m-70-iso8859-1 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1986-2 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1992.2-0 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1992-2 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1992-3 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1992.3-0 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1992.4-0 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1992-4 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1992.5-0 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1992-5 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1992.6-0 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1992-6 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1992.7-0 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643.1992-7 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643-2 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643-3 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643-4 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643-5 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643-6 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-cns11643-7 GetFontNames -*-*-*-*-*-*-*-*-*-*-*-*-iso8859-3 loaded -microsoft-comic sans ms-medium-r-normal--12-*-0-0-p-*-iso8859-3 FindFont(0061)[monospace, ] returns -microsoft-comic sans ms-medium-r-normal--12-*-0-0-p-*-iso8859-3 FindFont(0061)[monospace, ] returns -adobe-courier-medium-r-normal--12-120-75-75-m-70-iso8859-1 FindFont(0061)[monospace, ] returns -microsoft-comic sans ms-medium-r-normal--12-*-0-0-p-*-iso8859-3 FindFont(0061)[sans-serif, ] returns -monotype-arial-medium-r-normal--16-*-0-0-p-*-iso8859-1
I am clueless in Linux. assigning to shanjian and cc'ing bstell
Assignee: yokoyama → shanjian
Keywords: intl
QA Contact: ruixu → ylong
"no" and "nb" are the same language. Why does moz suddenly try to get a unicode font? It should be pulling iso8859-1. The same walk through cns11643* is performed in a debug here, but moz picks another font - adobe-courier - since that is the first font on my system that maps to the cns "fallback" (?) iso8859-3 Resolving as new - this looks odd.
Status: UNCONFIRMED → NEW
Ever confirmed: true
This might be a duplicate of #60328
Attached patch patchSplinter Review
the problem is in our language group look up. "no" is specified in langGroups.properties, so we have no problem identify its lang group. For rest of the language specification, we do not have such item in the property file. A bug in the function cause language name contains "-" default to x-western, but language name without "-" will default to nothing. The patch I proposed fix this problem.
Status: NEW → ASSIGNED
This is a goodie.. built with the patch on Linux: Things look a lot better now.
*** Bug 129371 has been marked as a duplicate of this bug. ***
nominate this one as nsbeta1
Keywords: nsbeta1
*** Bug 119284 has been marked as a duplicate of this bug. ***
Comment on attachment 72154 [details] [diff] [review] patch r=smontagu
Attachment #72154 - Flags: review+
Comment on attachment 72154 [details] [diff] [review] patch sr=blizzard
Attachment #72154 - Flags: superreview+
Confirming this problem on Windows 98. I get an Algerian font on my computer, which is the first Western, fantasy font. The fcc's FM query has this problem. <a href="http://www.fcc.gov/fcc-bin/fmq?state=WA&call=&arn=&serv=&city=Longview&freq=0.0&fre2=107.9&facid=&dkt=&list=2&dist=&dlat2=&mlat2=&slat2=&NS=N&dlon2=&mlon2=&slon2=&EW=W">This link</a> demonstrates the problem. The lang specified is "english".
I think we should also add nb=x-western to /intl/locale/src/langGroups.properties nsbeta1+ and ask nhotta to check in for shanjian without this patch, some webpage will show very bad type face.
Assignee: shanjian → nhotta
Status: ASSIGNED → NEW
Keywords: nsbeta1nsbeta1+
Comment on attachment 72154 [details] [diff] [review] patch a=scc
Attachment #72154 - Flags: approval+
checked in to the trunk
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.0
Verified fixed on 03-25 trunk build / RH7.2-JA.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: