Changed to use x-western lang group for the error fallback, patch by shanjian, bug 128338, r=smontage, sr=blizzard, a=scc.